log/build_2020-08-07_23-30-26/main/stderr.log
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.cpp:6:23: error: call to non-static member function without an object argument
        float degree = Calc::degree_atan2(ball.pose,robot.pose);
                       ~~~~~~^~~~~~~~~~~~
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.cpp:7:17: error: call to non-static member function without an object argument
        degree = Calc::wrap_calc(degree);
                 ~~~~~~^~~~~~~~~
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/main.cpp:2:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:16:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:2:
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: error: redefinition of 'Calc'
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp:10:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:2:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: note: unguarded header; consider using #ifdef guards or #pragma once
class Calc{
      ^
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:6:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/game.hpp:16:
In file included from /Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:2:
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: error: redefinition of 'Calc'
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/attacker.hpp:10:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/goalie.hpp:2:10: note: '/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp' included multiple times, additional include site here
#include "calculate.hpp"
         ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/calculate.hpp:11:7: note: unguarded header; consider using #ifdef guards or #pragma once
class Calc{
      ^
/Users/mukuyo/Desktop/RI-AI/src/main/src/game.cpp:31:16: warning: unused variable 'field_width' [-Wunused-variable]
         float field_width = geometry_message->field_width;
               ^
2 errors generated.
make[2]: *** [CMakeFiles/main.dir/src/attacker.cpp.o] Error 1
make[2]: *** Waiting for unfinished jobs....
1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/game.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
